--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@westacks/vortex",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "description": "Server-based routing for SPAs",
   "author": "Dmytro Morozov <puny.flash@gmail.com>",
@@ -33,6 +33,7 @@
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.0.0",
     "vitepress": "^1.0.0",
+    "vitepress-plugin-tabs": "^0.5.0",
     "vue": "^3.0.0"
   },
   "files": [
