--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@westacks/vortex",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "license": "MIT",
   "description": "Server-based routing for SPAs",
   "author": "Dmytro Morozov <puny.flash@gmail.com>",
@@ -27,13 +27,16 @@
     "axios": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "^3.0.0",
-    "vitepress": "^1.0.0",
-    "vitepress-plugin-tabs": "^0.5.0",
-    "vue": "^3.0.0"
+    "@types/node": "^22.15.18",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.3",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-tabs": "^0.7.1",
+    "vue": "^3.5.13"
+  },
+  "peerDependencies": {
+    "@bprogress/core": "^1.0.0"
   },
   "files": [
     "dist"
@@ -44,19 +47,24 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     },
     "./server": {
+      "types": "./dist/server.d.ts",
       "import": "./dist/server.js",
-      "require": "./dist/server.cjs",
-      "types": "./dist/server.d.ts"
+      "require": "./dist/server.cjs"
     },
-    "./extensions": {
-      "import": "./dist/extensions.js",
-      "require": "./dist/extensions.cjs",
-      "types": "./dist/extensions/index.d.ts"
+    "./inertia": {
+      "types": "./dist/extensions/inertia.d.ts",
+      "import": "./dist/inertia.js",
+      "require": "./dist/inertia.cjs"
+    },
+    "./bprogress": {
+      "types": "./dist/extensions/bprogress.d.ts",
+      "import": "./dist/bprogress.js",
+      "require": "./dist/bprogress.cjs"
     }
   }
 }
