--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vortex"
   ],
   "scripts": {
+    "lint": "eslint src",
     "build": "vite build",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -27,13 +28,18 @@
     "axios": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
+    "@eslint/js": "^9.27.0",
+    "@types/node": "^22.15.21",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5",
-    "vite-plugin-dts": "^4.5.3",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-eslint": "^1.8.1",
     "vitepress": "^1.6.3",
     "vitepress-plugin-tabs": "^0.7.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.14"
   },
   "peerDependencies": {
     "@bprogress/core": "^1.0.0"
