--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "vue": "^3.5.14"
   },
   "peerDependencies": {
-    "@bprogress/core": "^1.0.0"
+    "@bprogress/core": "^1.0.0",
+    "svelte": "^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "files": [
     "dist"
@@ -62,15 +63,22 @@
       "import": "./dist/server.js",
       "require": "./dist/server.cjs"
     },
+
     "./inertia": {
       "types": "./dist/extensions/inertia.d.ts",
-      "import": "./dist/inertia.js",
-      "require": "./dist/inertia.cjs"
+      "import": "./dist/extensions/inertia.js",
+      "require": "./dist/extensions/inertia.cjs"
     },
     "./bprogress": {
       "types": "./dist/extensions/bprogress.d.ts",
-      "import": "./dist/bprogress.js",
-      "require": "./dist/bprogress.cjs"
+      "import": "./dist/extensions/bprogress.js",
+      "require": "./dist/extensions/bprogress.cjs"
+    },
+
+    "./svelte": {
+      "types": "./dist/adapters/svelte/index.d.ts",
+      "import": "./dist/adapters/svelte.js",
+      "require": "./dist/adapters/svelte.cjs"
     }
   }
 }
