--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "peerDependencies": {
     "@bprogress/core": "^1.0.0",
-    "svelte": "^3.0.0 || ^4.0.0 || ^5.0.0"
+    "svelte": "^3.0.0 || ^4.0.0 || ^5.0.0",
+    "vue": "^3.0.0"
   },
   "files": [
     "dist"
@@ -74,9 +75,14 @@
       "require": "./dist/extensions/bprogress.cjs"
     },
     "./svelte": {
-      "types": "./dist/adapters/svelte/index.d.ts",
+      "types": "./dist/adapters/svelte.d.ts",
       "import": "./dist/adapters/svelte.js",
       "require": "./dist/adapters/svelte.cjs"
+    },
+    "./vue": {
+      "types": "./dist/adapters/vue.d.ts",
+      "import": "./dist/adapters/vue.js",
+      "require": "./dist/adapters/vue.cjs"
     }
   }
 }
