--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/node": "^24.0.11",
+    "@types/react": "^19.1.8",
     "eslint": "^9.30.1",
     "globals": "^16.3.0",
     "typescript": "^5.8.3",
@@ -45,7 +46,8 @@
     "@bprogress/core": "^1.0.0",
     "svelte": "^3.0.0 || ^4.0.0 || ^5.0.0",
     "vue": "^3.0.0",
-    "solid-js": "^1.0.0"
+    "solid-js": "^1.0.0",
+    "react": "^19.0.0"
   },
   "files": [
     "dist"
