--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "axios": "^1.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/node": "^24.0.11",
+    "@eslint/js": "^9.31.0",
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
-    "eslint": "^9.30.1",
+    "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0",
-    "vite": "^7.0.3",
+    "vite": "^7.0.4",
     "vite-plugin-dts": "^4.5.4",
     "vite-plugin-eslint": "^1.8.1",
     "vitepress": "^1.6.3",
@@ -47,7 +47,8 @@
     "svelte": "^3.0.0 || ^4.0.0 || ^5.0.0",
     "vue": "^3.0.0",
     "solid-js": "^1.0.0",
-    "react": "^19.0.0"
+    "react": "^19.0.0",
+    "preact": "^10.11.0"
   },
   "files": [
     "dist"
@@ -91,6 +92,16 @@
       "types": "./dist/adapters/solid-js.d.ts",
       "import": "./dist/adapters/solid-js.js",
       "require": "./dist/adapters/solid-js.cjs"
+    },
+    "./react": {
+      "types": "./dist/adapters/react.d.ts",
+      "import": "./dist/adapters/react.js",
+      "require": "./dist/adapters/react.cjs"
+    },
+    "./preact": {
+      "types": "./dist/adapters/preact.d.ts",
+      "import": "./dist/adapters/preact.js",
+      "require": "./dist/adapters/preact.cjs"
     }
   }
 }
